client+server: add chat feature
